--- a/src/main/resources/templates/guestviews/base.html
+++ b/src/main/resources/templates/guestviews/base.html
@@ -27,7 +27,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active">
-                    <img th:src="${'/image/'+guest.profile}" class="img-fluid" style="height: 40px; width: 40px;"
+                    <img th:src="${'/image/guest/'+guest.profile}" class="img-fluid" style="height: 40px; width: 40px;"
                         alt="">
                 </li>
                 <li class="nav-item active">
