--- a/src/main/resources/static/css/gstyle.css
+++ b/src/main/resources/static/css/gstyle.css
@@ -52,8 +52,8 @@ html {
 }
 
 body {
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     font-family: poppins, sans-serif;
     font-size: 0.88rem;
     background: var(--color-background);
@@ -67,7 +67,7 @@ body {
     width: 96%;
     margin: 0 auto;
     gap: 1.8rem;
-    grid-template-columns: 14rem aouto 23 rem;
+    /* grid-template-columns: 14rem aouto 23 rem; */
 }
 
 img { 
@@ -160,6 +160,11 @@ small {
 
     .payment-info {
         overflow: scroll;
+    }
+    .payment-info .card{
+        overflow: scroll;
+        border-color: var(--color-background);
+        border-width: 3px;
     }
 
 }
@@ -272,9 +277,9 @@ small {
 }
 .pg-sortinfo div {
     display: flex;
-    background: var(--color-dark);
-    border-left: blueviolet;
+    background: var(--color-primary);
     border-radius: 20px;
+    margin: 4px;
     overflow-x: hidden;
 }
 .pg-sortinfo a {
@@ -284,11 +289,22 @@ small {
     color: white; 
     border-width: 3px;
     border-color: var(--color-primary);
-    /* background: var(--color-warning); */
 }
 .pg-sortinfo img {
     padding: 3px;
+    height: 3rem;
+    width: 3rem;
+    margin-top: 16px;
     border-width: 0.2rem;
-    border-color: #111e88;
+    border-radius: 10px;
     background: #e2e2e2;
+}
+
+.reg-date {
+    background: #e2e2e2;
+    max-height: 2rem;
+    color: var(--color-primary);
+    border-radius: 8px;
+    padding: 5px;
+    margin-top: 22px;
 }
