--- a/src/main/resources/static/css/gstyle.css
+++ b/src/main/resources/static/css/gstyle.css
@@ -268,6 +268,15 @@ small {
     margin-left: 30%;
 }
 
+.pg-name {
+    background: var(--color-primary);
+    border-radius: 20px;
+    color: white;
+    padding: 5px;
+    max-width: 250px;
+    justify-self: center;
+}
+
 /* owner pg sort-info */
 .pg-sortinfo {
     display: flex;
@@ -307,4 +316,36 @@ small {
     border-radius: 8px;
     padding: 5px;
     margin-top: 22px;
+}
+
+.card .card {
+    border-radius: 8px !important;
+    box-shadow: none;
+    border-width: 1.5px;
+    display: grid;
+    border-color: var(--color-dark);
+}
+
+.floor-name {
+    background-color: var(--color-primary);
+    border-radius: 10px;
+    border-color: var(--color-dark);
+    padding: 3px;
+    color: white;
+    max-width: 6rem;
+    margin-top: -35px;
+}
+
+.flat-view {
+    display: blox;
+}
+
+.room-view img {
+    height: 28px;
+    width: 28px;
+    border-radius: 50%;
+}
+
+.room-view span {
+    margin-top: 10px;
 }
