--- a/src/main/resources/templates/ownerviews/pgview.html
+++ b/src/main/resources/templates/ownerviews/pgview.html
@@ -10,10 +10,10 @@
 
 <body>
     <section>
-        <div class="container text-center ">
-            <h1>This is <span th:text="${pg.name}"></span></h1>
+        <div class="container-fluid text-center ">
+            <h1 class="pg-name" th:text="${pg.name}"></h1>
             <div class="row">
-                <div class="col-sm">
+                <div class="col-md-6 col-12">
                     <div class="card text-center">
                         <div class="row">
                             <div class="col">
@@ -32,7 +32,7 @@
                                     </tr>
                                     <tr>
                                         <th>Registered</th>
-                                        <td th:text="${pg.regDate}"></td>
+                                        <td th:text="${#dates.format(pg.regDate,'dd-MM-yyyy')}"></td>
                                     </tr>
                                     <tr>
                                         <th>Profile</th>
@@ -60,8 +60,39 @@
                             </div>
                         </div>
                     </div>
+
+                    <!-- PG floor and room view -->
+                    <div class="card">
+                        <div class="card" th:each="flr : ${pg.floor}">
+                            <div class="container-fluid text-center">
+                                <h3 class="floor-name" th:text="${'Floor ' + flr.name}"></h3>
+                                <div class="row">
+                                    <!-- flat view -->
+                                    <div class="card d-flex mr-3" th:each="flt : ${flr.flat}">
+                                        <h3 class="floor-name" th:text="${flt.name}"></h3>
+                                        <div class="row">
+                                            <!-- room view -->
+                                            <div th:each="r : ${flt.room}">
+                                                <div class="card d-flex mr-2">
+                                                    <h4 class="floor-name" th:text="${r.name}"></h4>
+                                                    <!-- guest view -->
+                                                    <div th:each="gst : ${r.guest}">
+                                                        <div class="room-view row d-flex">
+                                                            <img class="m-2" th:src="${'/image/guest/'+gst.profile}">
+                                                            <span th:text="${gst.name}"></span>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="col-sm">
+
+                <div class="col-md-6 col-12">
                     <div class="card">
                         <div class="container">
                             <h2 class="text-muted">Guests</h2>
@@ -82,7 +113,8 @@
                                     </td>
                                     <td>
                                         <!-- <a th:href="${pg.id}+'/'+${pg.name.replace(' ','-')}" class="my-3"><span th:text="${pg.name}"></span></a> -->
-                                        <a th:href="${guest.id}+'/'+${guest.name.replace(' ','-')}"><span th:text="${guest.name}"></span></a>   
+                                        <a th:href="${guest.id}+'/'+${guest.name.replace(' ','-')}"><span
+                                                th:text="${guest.name}"></span></a>
                                     </td>
                                     <td th:classappend="${guest.enabled == true ? 'text-success' : 'text-danger'}">
                                         <span th:text="${guest.enabled == true ? 'Active' : 'Deactive'}"></span>
@@ -90,12 +122,14 @@
                                 </tr>
                             </table>
                             <div th:if="${gsts.size != 0 && gsts != null}">
-                                <a th:href="@{/owner/download-guest-details}" class="btn btn-block btn-success">Download</a>
+                                <a th:href="@{/owner/download-guest-details}"
+                                    class="btn btn-block btn-success">Download</a>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
+        </div>
         </div>
 
         <!-- add modal -->
