--- a/src/main/resources/templates/ownerviews/pgdetails.html
+++ b/src/main/resources/templates/ownerviews/pgdetails.html
@@ -1,22 +1,20 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="ownerviews/base::layout(~{::section})">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
 </head>
-
 <body>
     <section>
-        <div class="container-fluid text-center ">
-            <h1 class="pg-name" th:text="${pg.name}"></h1>
+        <div class="container-fluid text-center">
+            
             <div class="row">
-                <div class="col-md-6 col-12">
-                    <div class="card text-center">
-                        <h2 class="text-center text-muted">Details</h2>
-                        <div class="container-fluid text-center">
+                <div class="col">
+                    <div class="card">
+                        <div class="container-fluid">
+                            <h1 class="text-muted text-center">Pg Details</h1>
                             <table class="table mt-2">
                                 <tr>
                                     <th>Name</th>
@@ -43,98 +41,91 @@
                                     <td th:text="${pg.floor.size}"></td>
                                 </tr>
                             </table>
-                        </div>
-                    </div>
-
-                    <!-- PG floor and room view -->
-                    <div class="card">
-                        <div th:if="${pg.floor.size == 0 || pg.floor.size == null}">
-                            <div class="container-fluid text-center">
-                                <h3 class="text-danger">You have not added the floor</h3>
-                                <a class="btn btn-success"
-                                    th:href="@{'/owner/'+${pg.id}+'/'+${pg.name.replace(' ','-')+'/details'}}"
-                                    target="_blank">
-                                    <span>Add floor</span>
-                                </a>
-                            </div>
-                        </div>
-                        <div th:if="${pg.floor.size > 0 || pg.floor.size != null}" class="card"
-                            th:each="flr : ${pg.floor}">
-                            <div class="container-fluid text-center">
-                                <h3 class="floor-name" th:text="${'Floor ' + flr.name}"></h3>
+                            <!-- <div th:each="flr : ${pg.floor}">
+                                <h4>Name: <span th:text="${flr.name}"></span></h4>
+                            </div> -->
+                            <div class="container text-center">
                                 <div class="row">
-                                    <!-- flat view -->
-                                    <div class="card d-flex mr-3" th:each="flt : ${flr.flat}">
-                                        <h3 class="floor-name" th:text="${flt.name}"></h3>
-                                        <div class="row">
-                                            <!-- room view -->
-                                            <div th:each="r : ${flt.room}">
-                                                <div class="card d-flex mr-2">
-                                                    <h4 class="floor-name" th:text="${r.name}"></h4>
-                                                    <!-- guest view -->
-                                                    <div th:each="gst : ${r.guest}">
-                                                        <div class="room-view row d-flex">
-                                                            <img class="m-2" th:src="${'/image/guest/'+gst.profile}">
-                                                            <span
-                                                                th:classappend="${gst.paymentStatus ? 'payment-status-true' : 'payment-status-false'}"
-                                                                th:text="${gst.name}"></span>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
+                                    <div class="col">
+                                        <button type="button" class="btn btn-block btn-success" data-toggle="modal"
+                                            data-target="#add-modal">Edit</button>
+                                    </div>
+                                    <div class="col">
+                                        <button type="button" class="btn btn-block btn-success" data-toggle="modal"
+                                            data-target="#policy-modal"
+                                            th:text="${pg.policy == null ? 'Add policy' : 'Edit policy'}"></button>
+                                    </div>
+                                    <div class="col">
+                                        <a href="#" class="btn btn-block btn-warning">Remove</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
                     </div>
 
-                </div>
 
-                <!-- PG's guest list -->
-                <div class="col-md-6 col-12">
                     <div class="card">
-                        <div class="container">
-                            <h2 class="text-muted">Guests</h2>
-                            <div th:if="${gsts.size == 0 || gsts == null}">
-                                <h2 class="text-danger">No guests are avialiable</h2>
+                        <h1 class="text-muted tex-center">Floors and Rooms</h1>
+                        <div th:if="${pg.floor.size == 0 || pg.floor.size == null}">
+                            <div class="container-fluid text-center">
+                                <h3 class="text-danger">You have not added the floor</h3>
+                                <button class="btn btn-success" type="button" data-target="#addFloor-modal" data-toggle="modal">
+                                    <span>Add floor</span>
+                                </button>
                             </div>
-                            <table class="table" th:if="${gsts.size() != 0}">
-                                <thead>
-                                    <tr>
-                                        <th>Dp</th>
-                                        <th>Name</th>
-                                        <th>Status</th>
-                                    </tr>
-                                </thead>
-                                <tr th:each="guest : ${gsts}">
-                                    <td>
-                                        <img class="sm-profile" th:src="${'/image/guest/'+guest.profile}" alt="">
-                                    </td>
-                                    <td>
-                                        <!-- <a th:href="${pg.id}+'/'+${pg.name.replace(' ','-')}" class="my-3"><span th:text="${pg.name}"></span></a> -->
-                                        <a th:href="${guest.id}+'/'+${guest.name.replace(' ','-')}"><span
-                                                th:text="${guest.name}"></span></a>
-                                    </td>
-                                    <td th:classappend="${guest.enabled == true ? 'text-success' : 'text-danger'}">
-                                        <span th:text="${guest.enabled == true ? 'Active' : 'Deactive'}"></span>
-                                    </td>
-                                </tr>
-                            </table>
-                            <div th:if="${gsts.size != 0 && gsts != null}">
-                                <a th:href="@{/owner/download-guest-details}"
-                                    class="btn btn-block btn-success">Download</a>
+                        </div>
+                        <div th:if="${pg.floor.size > 0 || pg.floor.size != null}" class="card mt-4" th:each="flr : ${pg.floor}">
+                            <div class="container-fluid text-center">
+                                <h3 class="floor-name" th:text="${'Floor ' + flr.name}"></h3>
+                                <button type="button" title="Add Floor" class="btn add add-ffr custom-button">
+                                    <i class="fa-solid fa-plus"></i>
+                                </button> 
+                                <button type="button" title="Edit Floor" class="btn update add-ffr custom-button">
+                                    <i class="fa-solid fa-pen-nib"></i>
+                                </button> 
+                                <button type="button" title="Delete Floor" th:onclick="|deleteFloor(${flr.id})|" class="btn delete add-ffr custom-button">
+                                    <i class="fa-solid fa-trash-can"></i>
+                                </button>
+                                <div class="row">
+                                    <!-- flat view -->
+                                    <div class="card d-flex mr-3" th:each="flt : ${flr.flat}">
+                                        <h3 class="floor-name" th:text="${flt.name}"></h3>
+                                         
+                                        <div class="row">
+                                            <!-- room view -->
+                                            <div th:each="r : ${flt.room}">
+                                                <div class="card d-flex mr-2">
+                                                    <h4 class="floor-name" th:text="${r.name}"></h4>
+                                                    
+                                                </div>
+                                            </div>
+                                        </div>
+                                        
+                                    </div>
+                                </div>
+                                
+                                 
                             </div>
+                        </div>
+                        <div class="container-fluid mt-3">
+                            <button type="button" title="Add Floor" class="btn add custom-button" data-target="#addFloor-modal" data-toggle="modal">
+                                <span><i class="fa-solid fa-plus"></i></span>
+                            </button> 
+                            <button type="button" title="Edit Floor" class="btn update custom-button">
+                                <span><i class="fa-solid fa-pen-nib"></i></span>
+                            </button> 
+                            <button type="button" title="Delete Floor" class="btn delete custom-button">
+                                <span><i class="fa-solid fa-trash-can"></i></span>
+                            </button>
                         </div>
                     </div>
                 </div>
-                <!-- Ends of PG's guest list -->
             </div>
         </div>
-        </div>
 
-        <!-- add modal -->
-        <div class="modal fade" id="add-modal" tabindex="-1" aria-hidden="true">
+
+         <!-- add modal -->
+         <div class="modal fade" id="add-modal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -185,8 +176,8 @@
             </div>
         </div>
 
-        <!-- policy modal -->
-        <div class="modal fade" id="policy-modal" tabindex="-1" aria-hidden="true">
+         <!-- policy modal -->
+         <div class="modal fade" id="policy-modal" tabindex="-1" aria-hidden="true">
             <div class="modal-dialog">
                 <div class="modal-content">
                     <div class="modal-header">
@@ -214,14 +205,14 @@
                         <!-- Policy message Message -->
                         <div class="form-group">
                             <label for="pg-name">Message</label>
-                            <textarea class="form-control" name="message" placeholder="Enter Policy message" rows="3"
-                                required></textarea>
+                            <textarea class="form-control" name="message" placeholder="Enter Policy message"
+                             rows="3" required></textarea>
                         </div>
                         <!-- <h3 th:text="${pg.policy.message == null}"><span>message not avialiable</span></h3> -->
                         <div class="form-group">
                             <label for="pg-name">Rules</label>
-                            <textarea class="form-control" name="rule" placeholder="Enter Policy message" rows="3"
-                                required></textarea>
+                            <textarea class="form-control" name="rule" placeholder="Enter Policy message"
+                             rows="3" required></textarea>
                         </div>
                         <!-- <h3 th:text="${pg.policy.rule == null}"><span>message not avialiable</span></h3> -->
                         <div>
@@ -233,25 +224,63 @@
             </div>
         </div>
 
+         <!-- Add Floor modal -->
+         <div class="modal fade" id="addFloor-modal" tabindex="-1" aria-hidden="true">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <div class="container-fluid text-center">
+                            <h2 class="modal-title text-muted"
+                                th:text="${pg.floor.size > 0 || pg.floor.size != null ? 'Add Floor' : 'Edit Floor'}"></h2>
+                        </div>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            <span aria-hidden="true">&times;</span>
+                        </button>
+                    </div>
 
-        <!-- <script>
-            $(document).ready(function() {
-                console.log("Form loaded");
-                $('#update-pg').on('Save', function(event) {
-                    event.preventDefault();
-                    let form = new FormData(this);
-                    $.ajax({
-                        url: "/update/pg-details",
-                        type: 'POST',
-                        data: form,
-                        success: function (data, status, jqXHR) {
-                            console.log(data);
-                        }
-                    })
-                })
-            })
-        </script> -->
-    </section>
+                    <!-- ADD FLOOR MODAL BODY -->
+                    <div class="modal-body">
+
+                        <div th:if="${pg.floor.size == 0}">
+                            <form class="mx-1 mx-md-6" th:action="@{'/owner/'+${pg.id}+'/add/floor'}" method="post"
+                                th:object="${floor}">
+                        </div>
+                        <div th:if="${pg.floor != null && pg.floor.size > 0}">
+                            <form class="mx-1 mx-md-6" th:action="@{'/owner/'+${pg.id}+'/add/floor'}" method="post"
+                                th:object="${floor}">
+                        </div>
+
+                        <!-- floor name -->
+                        <div class="form-group">
+                            <label for="pg-name">Name</label>
+                            <input type="text" placeholder="Enter floor name" class="form-control" name="name">
+                        </div>
+                       
+                        <div>
+                            <button type="submit" id="update-pg" class="btn btn-block btn-success">Save</button>
+                        </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <script>
+            function deleteFloor(fid) {
+                swal({
+                    title: "Are you sure?",
+                    text: "You want to delete this floor!",
+                    icon: "warning",
+                    button: true,
+                    dangerMode: true,
+                }) .then((willDelete) => {
+                    if(willDelete) {
+                        window.location = "/owner/delete/"+fid;
+                    } else {
+                        swal("Floor is not deleted");
+                    }
+                });
+            }
+        </script>
+    </section>   
 </body>
-
 </html>
