--- a/src/main/resources/templates/ownerviews/guestdetails.html
+++ b/src/main/resources/templates/ownerviews/guestdetails.html
@@ -13,7 +13,7 @@
         <div class="container text-center ">
 
             <div class="row">
-                <div class="col-sm col-md-6">
+                <div class="col-md-6 col-12">
                     <div class="card">
                         <div class="container-fluid text-center">
                             <img class="profile-photo top-profile" th:src="${'/image/guest/'+guest.profile}" alt="">
@@ -50,12 +50,25 @@
                                 <th>DOB</th>
                                 <td th:text="${#dates.format(guest.dob,'dd-MM-yyyy')}"></td>
                             </tr>
+                            <tr>
+                                <th>Pay status</th>
+                                <td th:text="${guest.paymentStatus ? 'True' : 'false'}"></td>
+                            </tr>
                         </table>
+
+                        <div th:if="${guest.enabled}">
+                            <a class=" btn btn-warning btn-block" th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/deactivate'}">Deactivate</a>
+                        </div>
+
+                        <div th:if="${!guest.enabled}">
+                            <a class=" btn btn-success btn-block" th:href="@{'/owner/'+${guest.pgDetails.id}+'/'+${guest.id}+'/activate'}">Activate</a>
+                            <p class="text-muted mt-2">User is not Active, check and verify the document to activate the user</p>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Payments details -->
-                <div class="col-sm">
+                <div class="col-md-6 col-12">
                     <div class="card payment-info" style="min-height: 50px;">
                         <div class="container-fluid payments">
                             <span class="material-icons-sharp text-center">currency_rupee</span>
@@ -98,6 +111,18 @@
                             </table>
                         </div>
 
+                    </div>
+
+                    <div class="card">
+                        <h2 class="text-muted">Document</h2>
+                        <p class="mt-3 text-danger" th:if="${guest.document == null}">
+                            Documnet not uploaded by 
+                            <span th:text="${guest.name}"></span>
+                        </p>
+                        <div th:if="${guest.document != null}">
+                            <a href=""><span th:text="${guest.document}"></span></a>
+                            <img class="mt-2" th:src="${'/image/guest/'+guest.document}" alt="">
+                        </div>
                     </div>
                 </div>
             </div>
